build: introduct ext2 image rule.
Add a custom rule to build an ext2 image by pulling the products of the
dependencies. The rule uses mke2fs from e2fsprogs that's expected to be
installed on the system as /sbin/mke2fs.

--- a/apps/BUILD
+++ b/apps/BUILD
@@ -1,8 +1,20 @@
 # Copyright (C) 2024 - Damien Dejean <dam.dejean@gmail.com>
 
 load("//apps/build:rules.bzl", "app_binary")
+load("//apps/build:image.bzl", "ext2_image")
 
 app_binary(
     name = "test",
     srcs = ["main.c"],
+)
+
+ext2_image(
+    name = "fs.img",
+    block_size = 1024,
+    # 64 MB or 61MiB
+    fs_size = 62592,
+    options = ["^large_file"],
+    deps = [
+        ":test",
+    ],
 )
