--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -33,3 +33,6 @@ git_override(
     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
     commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
 )
+
+# Common utils library used to write custom Bazel rules.
+bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
